--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.main.banner-mode=off
 logging.level.root=off
 
 # set database settings
-spring.datasource.url=jdbc:h2:file:./StatsDatabase
+spring.datasource.url=jdbc:h2:file:~/GuessingGame/StatsDatabase
 spring.datasource.username=username
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.h2.Driver
